# copyrighter

./: Cargo.toml  LICENSE.md  README.md
src/: common.rs  existing.rs  git.rs  history.rs  main.rs  stderr.rs  update.rs
